welcome.lessons.welcome.array.has271.Has271.scala.error
has271:3: error: not found: value &
		{ if (Math.abs(nums(i)- nums(i+1))==5) & (Math.abs(nums(i)- nums(i+2))=1)
                                                       ^